@@ -1,3 +1,7 @@
+2009-06-20: 19:50 Ali aliov@xfce.org
+	* Fix default values shown in the settings dialog.
+	* fix issue reading default values from xfconf.
+
 2009-06-20: 19:10 Ali aliov@xfce.org
 	* Fix a DPMS storage values.
 
